config/samples/gateway_v1alpha1_middleware.yaml
apiVersion: gateway.jkaninda.dev/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/name: goma-operator
    app.kubernetes.io/managed-by: kustomize
  name: middleware-sample
spec:
  # TODO(user): Add fields here
