config/samples/gateway_v1alpha1_gateway.yaml
apiVersion: gateway.jkaninda.dev/v1alpha1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: goma-operator
    app.kubernetes.io/managed-by: kustomize
  name: gateway-sample
spec:
  # TODO(user): Add fields here
