config/samples/gomaproj_v1beta1_gateway.yaml
apiVersion: gomaproj.github.io/v1beta1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: goma-operator
    app.kubernetes.io/managed-by: kustomize
  name: gateway-sample
spec:
  gatewayVersion: latest
  server:
    writeTimeout: 10
    readTimeout: 15
    idleTimeout: 30
    logLevel: info
    disableHealthCheckStatus: false
    disableKeepAlive: false
    enableMetrics: true
  replicaCount: 1
  resources:
    limits:
      cpu: 100m
      memory: 128Mi
    requests:
      cpu: 100m
      memory: 128Mi
  autoScaling:
    enabled: true
    minReplicas: 2
    maxReplicas: 5
    targetCPUUtilizationPercentage: 80
