config/samples/gateway_v1alpha1_route.yaml
apiVersion: gateway.jkaninda.dev/v1alpha1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: goma-operator
    app.kubernetes.io/managed-by: kustomize
  name: route-sample
spec:
  # TODO(user): Add fields here
