config/samples/gomaproj_v1beta1_route.yaml
apiVersion: gomaproj.github.io/v1beta1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: goma-operator
    app.kubernetes.io/managed-by: kustomize
  name: route-sample
spec:
  gateway: gateway-sample
  routes:
    - path: /
      name: Example
      hosts: []
      rewrite: /
      methods:
        - GET
      destination: https://example.com
      backends: []
      insecureSkipVerify: false
      healthCheck:
        path: /
        interval: 10s
        timeout: 10s
        healthyStatuses:
          - 200
          - 404
      cors:
        origins: []
        headers: {}
      rateLimit: 15
      disableHostFording: true
      interceptErrors: []
      blockCommonExploits: false
      middlewares:
        - middleware-sample
